# flow

./: .gitignore  Taskfile.yml  biome.json  components.json  create-container.html  edit-container.html  go.mod  go.sum  index.html  lang  main.go  package-lock.json  package.json  readme.md  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
cli/flow/: go.mod  go.sum  main.go  readme.md
completions/: flow.fish
public/: logo.avif
scripts/: replace-version.cjs
src/: App.css  create-container.tsx  edit-container.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  database.rs  docker.rs  mod.rs  window.rs
src-tauri/src/services/: docker.rs  mod.rs  storage.rs
src-tauri/src/types/: database.rs  errors.rs  mod.rs  requests.rs  settings.rs
src-tauri/tests/: integration_tests.rs  unit_services.rs
src-tauri/tests/integration/: container_update_test.rs  postgresql_integration_test.rs  redis_integration_test.rs  utils.rs
src-tauri/tests/unit/services/: docker_command_builder_test.rs  docker_service_test.rs  volume_migration_test.rs
src/core/errors/: error-handler.ts
src/core/tauri/: invoke.ts
src/features/app/: use-app.ts
src/features/app/api/: app.api.ts
src/features/app/hooks/: use-app-updater.ts  use-app-version.ts
src/pages/create-container/: CreateContainerPage.tsx
src/pages/edit-container/: EditContainerPage.tsx
src/pages/main/: MainPage.tsx
src/shared/components/: DatabaseConfigPanel.tsx  DeleteConfirmationDialog.tsx  DockerUnavailableOverlay.tsx
src/shared/types/: container.ts  docker.ts  settings.ts
src/shared/utils/: container.ts  docker.ts
src/test/: setup.ts
(+41 files in other folders)
